re PR tree-optimization/36474 (GCC takes forever to compile a certain file)

2008-06-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36474
	* opts.c (decode_options): Set max-fields-for-field-sensitive
	parameter to 100 for -O2, -Os and -O3.
	* params.def (max-fields-for-field-sensitive): Set default to zero.
	* doc/invoke.texi (max-fields-for-field-sensitive): Document
	defaults.

	* gcc.dg/tree-ssa/alias-15.c: Adjust testcase.

From-SVN: r136656